--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vuepress-theme-melody",
   "version": "1.0.0",
   "description": "blog by vuepress",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "vuepress build docs -dest dist",
-    "dev": "vuepress dev docs --no-cache --temp .temp",
+    "dev": "vuepress dev docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,6 +13,30 @@
     "theme",
     "vuepress"
   ],
+  "homepage": "https://github.com/youdeliang/vuepress-theme-melody",
+  "bugs": {
+    "url": "https://github.com/youdeliang/vuepress-theme-melody/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/youdeliang/vuepress-theme-melody"
+  },
+  "files": [
+    "lib/"
+  ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@vuepress/plugin-back-to-top": "^1.4.1",
+    "@vuepress/plugin-nprogress": "^1.4.1",
+    "date-fns": "^2.12.0",
+    "element-ui": "^2.13.1",
+    "vuepress-plugin-smooth-scroll": "0.0.9"
+  },
+  "devDependencies": {
+    "vuepress": "^1.4.1"
+  },
+  "peerDependencies": {
+    "vuepress": "^1.3.0"
+  }
 }
